--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
+    "bootstrap": "^4.5.3",
     "react": "^16.2.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
