--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "nodemon": "^1.14.6"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "concurrently": "^3.5.1",
     "cors": "^2.8.5",
-    "express": "^4.16.2"
+    "dotenv": "^8.2.0",
+    "express": "^4.16.2",
+    "firebase": "^8.1.1",
+    "firebase-admin": "^9.4.1",
+    "react-bootstrap": "^1.4.0",
+    "styled-components": "^5.2.1"
   }
 }
